# ChangeLog for gnome-base/gnome-keyring
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-keyring/ChangeLog,v 1.145 2009/04/28 17:52:14 armin76 Exp $

  28 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  gnome-keyring-2.22.3-r1.ebuild:
  sh stable

  27 Apr 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +files/gnome-keyring-2.22.3-pkg-libtasn1.patch,
  -gnome-keyring-2.22.2.ebuild, -gnome-keyring-2.22.3.ebuild,
  gnome-keyring-2.22.3-r1, gnome-keyring-2.24.1:
  Fix configure with recent libtasn1, bug #266554.
  Clean up old revisions.

  27 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  gnome-keyring-2.22.3-r1.ebuild:
  arm stable

*gnome-keyring-2.24.1 (17 Mar 2009)

  17 Mar 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
  +gnome-keyring-2.24.1.ebuild:
  Add gnome-keyring-2.24.1 from gnome overlay (p.masked, seems to need
  gnome-session-2.24 to function properly)

  15 Mar 2009; Markus Meier <maekke@gentoo.org>
  gnome-keyring-2.22.3-r1.ebuild:
  x86 stable, bug #260063

  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org>
  gnome-keyring-2.22.3-r1.ebuild:
  Marked stable on amd64

  07 Jan 2009; Raúl Porcel <armin76@gentoo.org>
  gnome-keyring-2.22.3-r1.ebuild:
  ia64 stable wrt #247825

  28 Dec 2008; Friedrich Oslage <bluebird@gentoo.org>
  gnome-keyring-2.22.3-r1.ebuild:
  Stable on sparc, bug #247825

  16 Dec 2008; Jeroen Roovers <jer@gentoo.org>
  gnome-keyring-2.22.3-r1.ebuild:
  Stable for HPPA (bug #247825).

  15 Dec 2008; Tobias Klausmann <klausman@gentoo.org>
  gnome-keyring-2.22.3-r1.ebuild:
  Stable on alpha, bug #247825

  26 Nov 2008; Brent Baude <ranger@gentoo.org>
  gnome-keyring-2.22.3-r1.ebuild:
  Marking gnome-keyring-2.22.3-r1 ppc64 for bug 247825

  22 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  gnome-keyring-2.22.3-r1.ebuild:
  ppc stable, bug #247825

  13 Nov 2008; Brent Baude <ranger@gentoo.org> gnome-keyring-2.22.3.ebuild: