@@ -2,11 +2,11 @@ AUX gnome-keyring-2.22.1-interix.patch 422 RMD160 596e46ee6e0a5602686673c3b0fda5
 AUX gnome-keyring-2.22.1-interix3.patch 1733 RMD160 c1f824593e0db93a6405871165aa4a29f17a5624 SHA1 8e75a60ed19763cbfc1b3c31172096ce24d3d0f9 SHA256 1c044f1aec3f75f21d161aa50ad0c697511ad4449ba59581af47433c7d05d11f
 AUX gnome-keyring-2.22.3-pkg-libtasn1.patch 1079 RMD160 8ddeb815ef69fd3a32b256fc144883c5ab9ca6f8 SHA1 84d93848fac4141aea4ddd5f221b5a3431a6774f SHA256 14332fdb39ab870bab747e148d2098f339758af5105504b9fc83c0582394303c
 AUX gnome-keyring-2.22.3-warnings.patch 780 RMD160 3f3e04754189b67720f2f1e7eebb5e24b9612cd2 SHA1 95077ed5efcc493e35b64b943548c569eef1cfff SHA256 03206a46f86675ed1d2773740a23b02eaa1221c8dbbd3caea0a30a42c82a7d82
-DIST gnome-keyring-2.20.3.tar.bz2 541431 RMD160 8e85220492cd87b15bb3f1fadbb6673cea3a684c SHA1 e6518a9521bc240ac4fb55185747c80ac41739e1 SHA256 5bfb69897c9042968637c33beca098a4bbabcb4b9863f3f49504bc82089fa970
 DIST gnome-keyring-2.22.3.tar.bz2 894308 RMD160 551f4a4d734e0196522be9276ae7e76110a96556 SHA1 0f52095590a684920cc683d1985ac66263702114 SHA256 1e14eed00d386763352896e540929760264885e1296ac11cfb8ca1c08dcea7f6
 DIST gnome-keyring-2.24.1.tar.bz2 1125993 RMD160 17c6701ef7b35902780b6c72b79a3f0eaafe2378 SHA1 93e92e01daecd85b1c0ae9dda09d5cc808989642 SHA256 3c9eb7f45dd0026340635b9e1ee18c36a47541610aa5a7ef604ca645aa4763f9
-EBUILD gnome-keyring-2.20.3.ebuild 901 RMD160 b79ced0df79b0600cd563b52734fb1facee14982 SHA1 78813a3d4908643407a1474c0ca4bfdf625ec638 SHA256 deafea76c8835433ecd5c51053cc25bc9eac43dedc9d51496c7db272b82d463b
+DIST gnome-keyring-2.26.1.tar.bz2 2738687 RMD160 0975197ae8e58a8d98a2ff11c062ec6c9cf74a79 SHA1 3ff24987392b3f51109709b2c020af3557155ef8 SHA256 47a79a7963652c19d9f566289fdb49ca286bfb1bef32b7e1032eb36c49bf7926
 EBUILD gnome-keyring-2.22.3-r1.ebuild 1561 RMD160 611e9df385cf103903a5d1ffdf031f0362876236 SHA1 80b3ca6e73262eedf2ba95e36985260f6b75c9c9 SHA256 9e9f8e90aeab57d964b27204df7cc653bdd4ed221ec887ab63984de43a6554fd
 EBUILD gnome-keyring-2.24.1.ebuild 1588 RMD160 96d9499b765260955c9e340e00a3b434c059ff50 SHA1 8a3cb0bb5ec11749ccef1e120f692d9aa88bbfab SHA256 ca200aae39f0bfb438a3e1270ba62321f2ff823164b396463a43a39b9bf46153
-MISC ChangeLog 18440 RMD160 16416697825cb17c65fc68b9a0b9629f548a88ee SHA1 210e8d6df16fe78ab0004b1156badc0673b31433 SHA256 021857681f9b56d7932e2cf0807ec8d9e291f0785ffa74bbaad082f035336f3e
+EBUILD gnome-keyring-2.26.1.ebuild 1595 RMD160 d12f8725b52ca989807f9b05c731ff815b0c64c2 SHA1 8cf0e4659cacf57ab6a9a8b5eaa860de12b2e8f3 SHA256 05b6dc4ddfcd56184d1dc41a9103b9411343f3ba0270002f9122f235680425ef
+MISC ChangeLog 18644 RMD160 20204daeffa76c89c14faffd2c019ea05fb1ea64 SHA1 8d21b4a4769cd611e01b16a3a566e66aea08175a SHA256 8599d6b3cd32dd1196b3d4df5c07ed65d0ba498b109a88dbdbbcdcf96a683973
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
